# mole

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  go.mod  main.go  sources.json
.claude/: settings.local.json
.codebuddy/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
archive/rust-version/: Cargo.toml
archive/rust-version/src/: bench.rs  config.rs  connect.rs  main.rs  platform.rs  runner.rs  status.rs  sub.rs  uri.rs
cmd/: ceiling.go  down.go  server.go  status.go  up.go
config/: builtin-rules.json  parser.go  parser_test.go  types.go
core/: autorule.go  clash.go  probe.go  schedule.go  schedule_test.go  singbox.go  supervisor.go
docs/: index.html  install.sh
homebrew/: mole.rb
mole-go/: Makefile  README.md  TESTING.md  TUN_TEST.md  build.sh  go.mod  install.sh  main.go  test_integration.sh
mole-go/cmd/: config.go  down.go  logs.go  root.go  server.go  status.go  up.go  validate.go
mole-go/config/: parser.go  types.go
mole-go/core/: hiddify.go  singbox.go
mole-go/test/: config_test.go  mock_hiddify.sh
mole-go/utils/: ipinfo.go  log.go  paths.go  pid.go
scripts/: mole-server.sh
src/: bench.rs  config.rs  connect.rs  main.rs  platform.rs  runner.rs  server.rs  status.rs  store.rs  sub.rs  uri.rs
utils/: ceiling.go  daemon.go  dns.go  dnscache.go  ipinfo.go  log.go  paths.go  pid.go  ruleset.go  state.go  state_test.go  sysctl.go
