[package]
name = "mole"
version = "0.2.0"
edition = "2021"
description = "Hysteria2 TUN VPN client for macOS (powered by sing-box)"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
urlencoding = "2"
reqwest = { version = "0.12", features = ["blocking"] }
dirs = "6"
