[package]
name = "mole"
version = "0.4.1"
edition = "2021"
description = "Multi-protocol TUN VPN client (powered by sing-box)"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
base64 = "0.22"
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
dirs = "6"
chrono = "0.4"
ctrlc = "3"
qr2term = "0.3.3"
